--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -498,6 +498,9 @@
     <ClCompile Include="SrcEngine\SceneEditor\SpriteObject.cpp">
       <Filter>未分類\ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SrcEngine\ShaderCreater.cpp">
+      <Filter>未分類\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\Others\Essentials.h">
@@ -831,6 +834,9 @@
       <Filter>Engine\ヘッダーファイル</Filter>
     </ClInclude>
     <ClInclude Include="SrcEngine\SceneEditor\SpriteObject.h">
+      <Filter>未分類\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="SrcEngine\ShaderCreater.h">
       <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
