--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -189,6 +189,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SrcEngine\3D\DebugCamera.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\DLLObject.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\SceneFromFile.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\ScriptComponent.cpp" />
@@ -297,6 +298,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClCompile Include="SrcEngine\SceneEditor\TestMoveObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="SrcEngine\3D\DebugCamera.h" />
     <ClInclude Include="SrcEngine\SceneEditor\DLLDef.h" />
     <ClInclude Include="SrcEngine\SceneEditor\DLLObject.h" />
     <ClInclude Include="SrcEngine\SceneEditor\SceneFromFile.h" />
