--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -501,6 +501,9 @@
     <ClCompile Include="SrcEngine\ShaderCreater.cpp">
       <Filter>未分類\ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="SrcEngine\3D\DebugCamera.cpp">
+      <Filter>未分類\ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\Others\Essentials.h">
@@ -837,6 +840,9 @@
       <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="SrcEngine\ShaderCreater.h">
+      <Filter>未分類\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="SrcEngine\3D\DebugCamera.h">
       <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
