--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -191,6 +191,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="SrcEngine\3D\DebugCamera.cpp" />
+    <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\DLLObject.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\SceneFromFile.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\ScriptComponent.cpp" />
@@ -300,6 +301,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\3D\DebugCamera.h" />
+    <ClInclude Include="SrcEngine\Renderer\SrToonStage.h" />
     <ClInclude Include="SrcEngine\SceneEditor\DLLDef.h" />
     <ClInclude Include="SrcEngine\SceneEditor\DLLObject.h" />
     <ClInclude Include="SrcEngine\SceneEditor\SceneFromFile.h" />
