--- a/SpicavirEngine.vcxproj.filters
+++ b/SpicavirEngine.vcxproj.filters
@@ -501,11 +501,11 @@
     <ClCompile Include="SrcEngine\ShaderCreater.cpp">
       <Filter>未分類\ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="SrcEngine\3D\DebugCamera.cpp">
-      <Filter>未分類\ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp">
       <Filter>未分類\ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="SrcEngine\3D\DebugCamera.cpp">
+      <Filter>Engine\ソースファイル\3D</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -845,11 +845,11 @@
     <ClInclude Include="SrcEngine\ShaderCreater.h">
       <Filter>未分類\ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="SrcEngine\3D\DebugCamera.h">
-      <Filter>未分類\ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="SrcEngine\Renderer\SrToonStage.h">
       <Filter>未分類\ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="SrcEngine\3D\DebugCamera.h">
+      <Filter>Engine\ヘッダーファイル\3D</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
