--- a/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
+++ b/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
@@ -12,8 +12,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\SrcEngine\Others\stdafx.h" />
+    <ClInclude Include="ababa.h" />
     <ClInclude Include="FirstPersonCamera.h" />
     <ClInclude Include="PlayerControl.h" />
+    <ClInclude Include="testA.h" />
     <ClInclude Include="TestDayo.h" />
     <ClInclude Include="Bases.h" />
     <ClInclude Include="IScriptObject.h" />
@@ -22,9 +24,11 @@
     <ClInclude Include="TitleCamera.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ababa.cpp" />
     <ClCompile Include="Bases.cpp" />
     <ClCompile Include="FirstPersonCamera.cpp" />
     <ClCompile Include="PlayerControl.cpp" />
+    <ClCompile Include="testA.cpp" />
     <ClCompile Include="TestDayo.cpp" />
     <ClCompile Include="IScriptObject.cpp" />
     <ClCompile Include="TestObject.cpp" />
