--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -193,6 +193,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClCompile Include="SrcEngine\3D\DebugCamera.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\DLLObject.cpp" />
+    <ClCompile Include="SrcEngine\SceneEditor\PipelineWindow.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\SceneFromFile.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\ScriptComponent.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\SpriteObject.cpp" />
@@ -304,6 +305,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClInclude Include="SrcEngine\Renderer\SrToonStage.h" />
     <ClInclude Include="SrcEngine\SceneEditor\DLLDef.h" />
     <ClInclude Include="SrcEngine\SceneEditor\DLLObject.h" />
+    <ClInclude Include="SrcEngine\SceneEditor\PipelineWindow.h" />
     <ClInclude Include="SrcEngine\SceneEditor\SceneFromFile.h" />
     <ClInclude Include="SrcEngine\SceneEditor\ScriptComponent.h" />
     <ClInclude Include="SrcEngine\SceneEditor\SpriteObject.h" />
