--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -192,6 +192,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
   <ItemGroup>
     <ClCompile Include="SrcEngine\3D\DebugCamera.cpp" />
     <ClCompile Include="SrcEngine\Renderer\SrToonStage.cpp" />
+    <ClCompile Include="SrcEngine\SceneEditor\ConsoleWindow.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\DLLObject.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\PipelineWindow.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\SceneFromFile.cpp" />
@@ -303,6 +304,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
   <ItemGroup>
     <ClInclude Include="SrcEngine\3D\DebugCamera.h" />
     <ClInclude Include="SrcEngine\Renderer\SrToonStage.h" />
+    <ClInclude Include="SrcEngine\SceneEditor\ConsoleWindow.h" />
     <ClInclude Include="SrcEngine\SceneEditor\DLLDef.h" />
     <ClInclude Include="SrcEngine\SceneEditor\DLLObject.h" />
     <ClInclude Include="SrcEngine\SceneEditor\PipelineWindow.h" />
