--- a/SrcExternal/EASTL/EASTL.vcxproj.filters
+++ b/SrcExternal/EASTL/EASTL.vcxproj.filters
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="17.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\allocator_eastl.cpp" />
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\assert.cpp" />
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\atomic.cpp" />
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\fixed_pool.cpp" />
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\hashtable.cpp" />
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\intrusive_list.cpp" />
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\numeric_limits.cpp" />
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\red_black_tree.cpp" />
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\string.cpp" />
-    <ClCompile Include="$(SolutionDir)SrcExternal\EASTL\source\thread_support.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\allocator_eastl.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\assert.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\atomic.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\fixed_pool.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\hashtable.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\intrusive_list.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\numeric_limits.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\red_black_tree.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\string.cpp" />
+    <ClCompile Include="$(ProjectDir)..\..\SrcExternal\EASTL\source\thread_support.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
