--- a/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
+++ b/LibraTestProj/LibraTestDLL/LibraTestDLL.vcxproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ClInclude Include="..\..\SrcEngine\Others\stdafx.h" />
     <ClInclude Include="ababa.h" />
+    <ClInclude Include="Easing.h" />
     <ClInclude Include="FirstPersonCamera.h" />
     <ClInclude Include="PlayerControl.h" />
     <ClInclude Include="SuperUI.h" />
@@ -22,11 +23,13 @@
     <ClInclude Include="IScriptObject.h" />
     <ClInclude Include="TestObject.h" />
     <ClInclude Include="TestPlayer.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="TitleCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ababa.cpp" />
     <ClCompile Include="Bases.cpp" />
+    <ClCompile Include="Easing.cpp" />
     <ClCompile Include="FirstPersonCamera.cpp" />
     <ClCompile Include="PlayerControl.cpp" />
     <ClCompile Include="SuperUI.cpp" />
@@ -36,6 +39,7 @@
     <ClCompile Include="IScriptObject.cpp" />
     <ClCompile Include="TestObject.cpp" />
     <ClCompile Include="TestPlayer.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="TitleCamera.cpp" />
   </ItemGroup>
   <ItemGroup>
