--- a/SpicavirEngine.vcxproj
+++ b/SpicavirEngine.vcxproj
@@ -300,6 +300,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClCompile Include="SrcEngine\Windows\SpWindow.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\StringObject.cpp" />
     <ClCompile Include="SrcEngine\SceneEditor\TestMoveObject.cpp" />
+    <ClCompile Include="TagWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SrcEngine\3D\DebugCamera.h" />
@@ -417,6 +418,7 @@ COPY $(SolutionDir)Resources\Compiled\$(Configuration)\SpicavirEngineGame.dll $(
     <ClInclude Include="SrcExternal\json.hpp" />
     <ClInclude Include="SrcEngine\SceneEditor\StringObject.h" />
     <ClInclude Include="SrcEngine\SceneEditor\TestMoveObject.h" />
+    <ClInclude Include="TagWindow.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\BasicGS.hlsl">
